objects/Promo_Code__c.object
<CustomObject>
    <fields>
        <fullName>Amount_List__c</fullName>
        <label>Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$5.00</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>$10.00</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>$15.00</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>$20.00</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>$25.00</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>$30.00</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>$35.00</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
                <value>
                    <fullName>$40.00</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>45.00$</fullName>
                </value>
                <value>
                    <fullName>45%</fullName>
                </value>
                <value>
                    <fullName>$50.00</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>$55.00</fullName>
                </value>
                <value>
                    <fullName>55%</fullName>
                </value>
                <value>
                    <fullName>$60.00</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>$65.00</fullName>
                </value>
                <value>
                    <fullName>65%</fullName>
                </value>
                <value>
                    <fullName>$70.00</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>$75.00</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hudson&apos;s Bay</fullName>
                </value>
                <value>
                    <fullName>MHF</fullName>
                </value>
                <value>
                    <fullName>Lord + Taylor</fullName>
                </value>
                <value>
                    <fullName>Saks</fullName>
                </value>
                <value>
                    <fullName>Off 5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Promo Codes</relationshipLabel>
        <relationshipName>Promo_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promo_Codes_Consumed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumed_Date__c</fullName>
        <description>https://hbcdigital.atlassian.net/browse/UAD-1090
Date to store the timestamp when the Promo Code was consumed</description>
        <label>Consumed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consumed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo_Code_Reason__c</fullName>
        <label>Promo Code Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shipping delay</fullName>
                </value>
                <value>
                    <fullName>Incorrect merchandise</fullName>
                </value>
                <value>
                    <fullName>Damaged merchandise</fullName>
                </value>
                <value>
                    <fullName>Cancelled order</fullName>
                </value>
                <value>
                    <fullName>Refund delay</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                    <isActive>false</isActive>
                    <label>TBD</label>
                </value>
                <value>
                    <fullName>Test value 1</fullName>
                    <isActive>false</isActive>
                    <label>Test value 1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Promo Code</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Promo Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount_List__c</columns>
        <columns>Case__c</columns>
        <columns>Consumed__c</columns>
        <columns>Consumed_By__c</columns>
        <columns>Promo_Code__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Support_Agent_Cant_Give_Over_20</fullName>
        <active>true</active>
        <description>Limits the Promo Code % to max 20% for regular agents</description>
        <errorConditionFormula>Consumed__c &amp;&amp;
ISCHANGED( Consumed__c ) &amp;&amp; 
(
ISPICKVAL(Amount_List__c ,&quot;25%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;30%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;35%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;40%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;45%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;50%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;55%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;60%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;65%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;70%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;75%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;80%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;85%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;90%&quot;) ||
ISPICKVAL(Amount_List__c ,&quot;95%&quot;)
)
&amp;&amp;
NOT(OR( 
(CONTAINS($Profile.Name, &apos;Service Excellence Agent&apos;)), 
(CONTAINS($Profile.Name, &apos;Executive Services&apos;)), 
(CONTAINS($Profile.Name, &apos;Support Management&apos;)), 
(CONTAINS($Profile.Name, &apos;Support Team Lead&apos;)), 
(CONTAINS($Profile.Name, &apos;Administrator&apos;)) 
))</errorConditionFormula>
        <errorMessage>Promo Codes over 20% must be given by a team lead (Error Promo Code - 01)</errorMessage>
    </validationRules>
</CustomObject>